added "ecrits_fr.pdf", search queries and ctrl+click to open a song on youtube (from library)

--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-	"downloads_path": "res://downloads/",
+	"downloads_path": "O:/PPPlayerGodot/pp-player/downloads/",
 	"last_id": "Ld",
 	"user_path": ""
 }
